# VibeOTT

./: .gitignore  AGENTS.md  CMakeLists.txt
.github/workflows/: build.yml
Contents/Resources/: moduleinfo.json
Source/: MultibandCompressor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
